# forge-flamegraph

./: Cargo.toml  README.md
src/: cli.rs  flamegraph.rs  function_call.rs  lib.rs  main.rs  opts.rs  step.rs
src/backends/: mod.rs
src/backends/call_trace/: mod.rs  parser.rs  utils.rs
src/backends/debug/: function_call.rs  mod.rs  parser.rs  step.rs  utils.rs
src/backends/debug/debugger/: mod.rs
src/backends/debug/debugger/tui/: builder.rs  context.rs  draw.rs  mod.rs
src/cmd/: flamegraph.rs  install.rs  mod.rs
src/cmd/test_o/: mod.rs  summary.rs
src/debugger/: mod.rs  op.rs
src/debugger/tui/: builder.rs  context.rs  draw.rs  mod.rs
src/forge/: install.rs  test.rs  watch.rs
