[package]
name = "forge-flamegraph"
version = "0.1.0"
edition = "2021"

[lib]
name = "forge_flamegraph"
path = "src/lib.rs"

[[bin]]
name = "forge-flamegraph"
path = "src/main.rs"

[dependencies]
# foundry crates.io
alloy-primitives = { version = "0.7.0", features = ["getrandom"] }
revm = { version = "8", default-features = false }
foundry-compilers = { version = "0.3.14", default-features = false }

# foundry github
forge = { git = "https://github.com/foundry-rs/foundry", rev = "43587e2b", default-features = false }
foundry-common = { git = "https://github.com/foundry-rs/foundry", rev = "43587e2b", default-features = false }
foundry-evm-core = { git = "https://github.com/foundry-rs/foundry", rev = "43587e2b", default-features = false }
foundry-evm-traces = { git = "https://github.com/foundry-rs/foundry", rev = "43587e2b", default-features = false }
foundry-cli = { git = "https://github.com/foundry-rs/foundry", rev = "43587e2b", default-features = false }
foundry-config = { git = "https://github.com/foundry-rs/foundry", rev = "43587e2b", default-features = false }
foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "43587e2b", default-features = false }
revm-inspectors = { git = "https://github.com/paradigmxyz/evm-inspectors", rev = "413b892", features = [
    "serde",
] } 

# misc
async-recursion = "1.0.5"
clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
eyre = "0.6"
futures = "0.3"
inferno = "0.11.19"
once_cell = "1"
open = "5"
regex = { version = "1", default-features = false }
semver = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
yansi = "0.5"

[build-dependencies]
vergen = { version = "8", default-features = false }